--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -7,3 +7,4 @@ Maintainer: Michael Hahsler <michael@hahsler.net>
 Depends: R (>= 2.10.0), rJava (>= 0.6-0)
 Description: Start and control processing applets (http://processing.org/) from R.
 License: GPL
+Copyright: Processing java code is copyright by Ben Fry and Casey Reas
